--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ email: 1053946416@qq.com
 name: zhtjun
 title: jekyll-blog
 subtitle: "A simple yet classy theme for Jekyll  blog"
-email: blcentra@gmail.com
+email: 1053946416@qq.com
 name: zhtjun
 description: >
   A simple yet classy theme for your Jekyll website or blog.
