--- a/_config.yml
+++ b/_config.yml
@@ -52,10 +52,10 @@ jekyll-archives:
 
 # Category descriptions (for archive pages)
 descriptions:
-  - cat: jekyll
+  - cat: jekyll3q
     desc: "Posts describing Jekyll setup techniques."
 
-  - cat: dummy
+  - cat: dummy3q
     desc: "Just some placeholder posts, lorem ipsum and the rest."
 
 # Social icons and sharing options
