--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://zhangtejun.github.io" # the base hostname & protocol for your site
 cover: "/assets/header_image.jpg"
 logo: "/assets/logo.png"
-
+position: "/assets/position.png"
 # Build settings
 markdown: kramdown
 paginate: 5
