--- a/_config.yml
+++ b/_config.yml
@@ -32,7 +32,7 @@ markdown: kramdown
 paginate: 5
 paginate_path: "/page:num/"
 inter_post_navigation: false
-highlightjs_theme: "monokai-sublime"
+highlightjs_theme: "railscasts"
 
 # Archive settings (see https://github.com/jekyll/jekyll-archives/)
 jekyll-archives:
