--- a/_config.yml
+++ b/_config.yml
@@ -32,7 +32,7 @@ prototype2: "/assets/prototype2.png"
 prototype3: "/assets/prototype3.png"
 prototype4: "/assets/prototype4.png"
 prototype5: "/assets/prototype5.png"
-
+prototype6: "/assets/prototype6.png"
 
 
 
