--- a/_config.yml
+++ b/_config.yml
@@ -33,7 +33,7 @@ prototype3: "/assets/prototype3.png"
 prototype4: "/assets/prototype4.png"
 prototype5: "/assets/prototype5.png"
 prototype6: "/assets/prototype6.png"
-
+prototype7: "/assets/prototype7.png"
 
 
 
