--- a/_config.yml
+++ b/_config.yml
@@ -34,7 +34,7 @@ prototype4: "/assets/prototype4.png"
 prototype5: "/assets/prototype5.png"
 prototype6: "/assets/prototype6.png"
 prototype7: "/assets/prototype7.png"
-
+annotation: "/assets/annotation.jpg"
 
 
 
