--- a/_config.yml
+++ b/_config.yml
@@ -35,7 +35,7 @@ prototype5: "/assets/prototype5.png"
 prototype6: "/assets/prototype6.png"
 prototype7: "/assets/prototype7.png"
 annotation: "/assets/annotation.jpg"
-
+prototype8: "/assets/prototype8.jpg"
 
 
 
