--- a/_config.yml
+++ b/_config.yml
@@ -36,6 +36,7 @@ prototype6: "/assets/prototype6.png"
 prototype7: "/assets/prototype7.png"
 annotation: "/assets/annotation.jpg"
 prototype8: "/assets/prototype8.jpg"
+823762316: "/assets/823762316.jpg"
 
 
 
