--- a/_config.yml
+++ b/_config.yml
@@ -37,7 +37,11 @@ prototype7: "/assets/prototype7.png"
 annotation: "/assets/annotation.jpg"
 prototype8: "/assets/prototype8.jpg"
 823762316: "/assets/823762316.jpg"
-
+p9: "/assets/p9.jpg"
+p10: "/assets/p10.gif"
+p11: "/assets/p11.gif"
+p12: "/assets/p12.gif"
+p13: "/assets/p13.gif"
 
 
 # Build settings
