--- a/_config.yml
+++ b/_config.yml
@@ -42,6 +42,7 @@ p10: "/assets/p10.gif"
 p11: "/assets/p11.gif"
 p12: "/assets/p12.gif"
 p13: "/assets/p13.gif"
+dispatcher: "/assets/dispatcher.png"
 
 
 # Build settings
