--- a/_config.yml
+++ b/_config.yml
@@ -45,6 +45,8 @@ p13: "/assets/p13.gif"
 dispatcher: "/assets/dispatcher.png"
 sf1: "/assets/sf1.png"
 
+#download
+Notepad++: "/download/Notepad++.zip"
 
 # Build settings
 markdown: kramdown
