--- a/_config.yml
+++ b/_config.yml
@@ -48,7 +48,7 @@ tree1: "/assets/tree1.jpg"
 tree2: "/assets/tree2.jpg"
 tree3: "/assets/tree3.jpg"
 tree4: "/assets/tree4.png"
-
+ip: "/assets/ip.jpeg"
 flux_1: "/assets/flux_1.jpg"
 
 #download
